@@ -25,6 +25,8 @@ BUG FIXES:
 +Don't reposition caret if it was moved during a threaded load operation.
 +Fix some errors with setting custom highlighting colors.
 +Set highlight foreground colour to White when selection colour is dark.
++Fix search in directory message handler in search controller that caused
+ some issues when the dialog had already been created.
 
 #-----------------------------------------------------------------------------#
 
